<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300sp"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1dip"
        android:background="@color/blue" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="5sp"
            android:layout_marginTop="5sp"
            android:text="@string/exit"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp"
        android:layout_marginLeft="10sp"
        android:layout_marginTop="10sp"
        android:text="@string/confirm_exit"
        android:textSize="17sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dip"
        android:layout_marginLeft="1dip"
        android:layout_marginRight="1dip"
        android:orientation="horizontal"
        android:weightSum="2" >

        <Button
            android:id="@+id/yes"
            android:layout_width="0sp"
            android:layout_height="30sp"
            android:layout_weight="1"
            android:background="@color/blue"
            android:text="@string/yes"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <View
            android:layout_width="1dip"
            android:layout_height="fill_parent"
            android:background="@color/white" />

        <Button
            android:id="@+id/no"
            android:layout_width="0sp"
            android:layout_height="30sp"
            android:layout_weight="1"
            android:background="@color/blue"
            android:text="@string/no"
            android:textColor="@color/white"
            android:textSize="17sp" />
    </LinearLayout>

</LinearLayout>