<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <AutoCompleteTextView
        android:id="@+id/search_idiom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:completionThreshold="2"
        android:drawableLeft="@drawable/ic_nup"
        android:drawablePadding="5sp"
        android:hint="@string/search"
        android:imeOptions="actionSearch"
        android:inputType="text" />

    <TextView
        android:id="@+id/add_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10sp"
        android:text="[ Add a note on this idiom]"
        android:textSize="20sp" />

    <!-- <LinearLayout -->
    <!-- android:layout_width="fill_parent" -->
    <!-- android:layout_height="200sp" -->
    <!-- android:layout_marginBottom="10sp" -->
    <!-- android:layout_marginLeft="10sp" -->
    <!-- android:layout_marginRight="10sp" -->
    <!-- android:background="@color/light_blue" -->
    <!-- android:gravity="center" > -->


    <!-- <TextView -->
    <!-- android:id="@+id/idiom_name" -->
    <!-- android:layout_width="wrap_content" -->
    <!-- android:layout_height="wrap_content" -->
    <!-- android:textColor="@color/black" -->
    <!-- android:textSize="35sp" /> -->
    <!-- </LinearLayout> -->

    <android.support.v4.view.ViewPager
        android:id="@+id/idiom_pager"
        android:layout_width="fill_parent"
        android:layout_height="200sp"
        android:layout_marginBottom="10sp"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_weight="2"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/add_to_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5sp"
            android:layout_weight="1"
            android:background="@color/dark_blue"
            android:text="@string/add"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/add_to_already_know"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5sp"
            android:layout_weight="1"
            android:background="@color/dark_blue"
            android:text="@string/already_know"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>