<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300sp"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:background="@color/add_to_list_color" >

        <ImageView
            android:id="@+id/cancel"
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_margin="10sp"
            android:src="@drawable/cancel_trans" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/add_to_list"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <ImageView
            android:id="@+id/done"
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_margin="10sp"
            android:src="@drawable/done_trans" />
    </RelativeLayout>

    <ListView
        android:id="@+id/lists"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:background="@color/white"
        android:divider="@color/white" >
    </ListView>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:background="@color/add_to_list_color" />

    <RelativeLayout
        android:id="@+id/add_new"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:padding="10sp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/add_new"
            android:textColor="@color/add_to_list_color"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/add_selection"
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_lang" />
    </RelativeLayout>

    <EditText
        android:id="@+id/list_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:background="@color/grey"
        android:hint="@string/enter_name"
        android:padding="10sp" />

</LinearLayout>