<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/footer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:background="@color/blue"
    android:orientation="horizontal"
    android:weightSum="4" >

    <RelativeLayout
        android:id="@+id/random"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:layout_marginBottom="5sp"
                android:layout_marginTop="5sp"
                android:src="@drawable/ic_random" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5sp"
                android:text="@string/random"
                android:textColor="@color/white" />
        </LinearLayout>

        <View
            android:layout_width="3sp"
            android:layout_height="50sp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="3sp"
            android:layout_marginTop="3sp"
            android:background="@color/white" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/lists"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:layout_marginBottom="5sp"
                android:layout_marginTop="5sp"
                android:src="@drawable/ic_lists" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5sp"
                android:text="@string/list"
                android:textColor="@color/white" />
        </LinearLayout>

        <View
            android:layout_width="3sp"
            android:layout_height="50sp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="3sp"
            android:layout_marginTop="3sp"
            android:background="@color/white" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/exam"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:layout_marginBottom="5sp"
                android:layout_marginTop="5sp"
                android:src="@drawable/ic_exam" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5sp"
                android:text="@string/exam"
                android:textColor="@color/white" />
        </LinearLayout>

        <View
            android:layout_width="3sp"
            android:layout_height="50sp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="3sp"
            android:layout_marginTop="3sp"
            android:background="@color/white" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/dictionary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:layout_marginBottom="5sp"
                android:layout_marginTop="5sp"
                android:src="@drawable/ic_search" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5sp"
                android:text="@string/dictionary"
                android:textColor="@color/white" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>