<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginTop="15sp"
        android:background="@drawable/bg_exam"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/point"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15sp"
            android:background="@drawable/bg_result"
            android:padding="10sp"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/percent"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15sp"
            android:layout_marginLeft="15sp"
            android:layout_marginRight="15sp"
            android:background="@drawable/bg_result"
            android:padding="10sp"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginTop="20sp"
        android:background="@drawable/bg_exam"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15sp"
            android:layout_marginTop="15sp"
            android:text="Do the next exam?"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15sp" >

            <Button
                android:id="@+id/finish"
                android:layout_width="80sp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="15sp"
                android:background="@drawable/lava_quiz_neutral"
                android:text="@string/finish" />

            <Button
                android:id="@+id/next_exam"
                android:layout_width="100sp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="15sp"
                android:background="@drawable/lava_quiz_neutral"
                android:text="@string/next_exam" />
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/share_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15sp"
        android:layout_marginRight="15sp"
        android:background="@drawable/bg_share"
        android:drawablePadding="10sp"
        android:drawableStart="@drawable/ic_fb"
        android:gravity="left|center_vertical"
        android:padding="10sp"
        android:text="@string/share_score"
        android:textColor="@color/white"
        android:textSize="19sp" />

</LinearLayout>